edited about page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -86,15 +86,15 @@
         <link rel="stylesheet" href="{{ site.url }}/static/css/syntax.css">
 
         <!-- Custom CSS -->        
-        <link rel="stylesheet" href="{{ site.url }}/static/css/thickbox.css">
-        <link rel="stylesheet" href="{{ site.url }}/static/css/main.css">
-        <link rel="stylesheet" href="{{ site.url }}/static/css/projects.css">
+        <link rel="stylesheet" href="{{ site.url }}static/css/thickbox.css">
+        <link rel="stylesheet" href="{{ site.url }}static/css/main.css">
+        <link rel="stylesheet" href="{{ site.url }}static/css/projects.css">
         {% include analytics.html %}
     </head>
 
     <body class="home overflow-hidden">
     <!--[if lt IE 7]>
-    <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade
+    <p class="browsehappy">You are using an <strong>impressively ancient</strong> browser . Please <a href="http://browsehappy.com/">upgrade
         your browser</a> to improve your experience.</p>
     <![endif]-->
     <div class="header-panel shadow-z-2">
