added netbot project and removed google ad at bottom

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -149,9 +149,9 @@
                     - <a href="#">Privacy link</a> - Powered by Jekyll.
                     
                 </footer>
-                <div align="center">
+                <!--<div align="center">
                   <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-                  <!-- hcz-jekyll -->
+                  &lt;!&ndash; hcz-jekyll &ndash;&gt;
                   <ins class="adsbygoogle"
                        style="display:block"
                        data-ad-client="ca-pub-0776433630785969"
@@ -160,7 +160,7 @@
                   <script>
                   (adsbygoogle = window.adsbygoogle || []).push({});
                   </script>
-                </div>
+                </div>-->
             </div>
                 </div>
             </div> <!-- end /.col-md-9 -->
